<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_60"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_35"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/light_mode_dark_mode"
            android:textSize="@dimen/size_27" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:drawableLeft="@drawable/ic_facebook"
            android:gravity="center"
            android:text="@string/facebook"
            android:textSize="@dimen/size_22" />

        <Button
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:drawableLeft="@drawable/ic_github"
            android:gravity="center"
            android:text="@string/github"
            android:textSize="@dimen/size_22" />

        <Button
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/size_22" />

        <Button
            android:id="@+id/termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/terms_amp_conditions"
            android:textSize="@dimen/size_22" />
    </LinearLayout>
</ScrollView>