...
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:contentDescription="@string/flag"
                app:flagImage="@{githubCountries.flagImg}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="@dimen/margin_22" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@{@string/name(githubCountries.name)}"
...
